# ibm_wxd

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.buildpilot/: .buildpilot.json  PRODUCT.md  SDLC.md  TESTING.md  WORKTREE.md  cycle_1.md  testing.config.json
.claude/: settings.json
.claude/agent-memory/product-manager/: MEMORY.md  architecture-undecided.md  hermetic-test-posture.md  product-file-location.md
.github/workflows/: audit.yml  ci.yml
crates/sw-api/: Cargo.toml  openapi.yaml
crates/sw-api/src/: catalog.rs  lib.rs  main.rs  preflight.rs  routes.rs
crates/sw-api/tests/: api.rs
crates/sw-api/ui/: app.js  index.html  styles.css
crates/sw-core/: Cargo.toml
crates/sw-core/src/: command.rs  event.rs  lib.rs  model.rs  module.rs  orchestrator.rs  registry.rs  store.rs
crates/sw-mod-existing/: Cargo.toml
crates/sw-mod-existing/src/: lib.rs
crates/sw-mod-prereqs/: Cargo.toml
crates/sw-mod-prereqs/src/: lib.rs
crates/sw-mod-provision/: Cargo.toml
crates/sw-mod-provision/src/: lib.rs
crates/sw-mod-services/: Cargo.toml
crates/sw-mod-services/src/: lib.rs
crates/sw-mod-softwarehub/: Cargo.toml
crates/sw-mod-softwarehub/src/: lib.rs
crates/sw-mod-storage/: Cargo.toml
crates/sw-mod-storage/src/: lib.rs
crates/wxd-config/: Cargo.toml
crates/wxd-config/src/: cli.rs  collect.rs  generate.rs  lib.rs  main.rs  mask.rs  spec.rs  validate.rs
crates/wxd-config/tests/: cli_integration.rs
crates/wxd-svc-watsonxdata/: Cargo.toml
crates/wxd-svc-watsonxdata/src/: lib.rs
docs/: RESUME-watsonx-data-install.md  architecture.md  extending.md  roadmap.md  running-the-installer.md
docs/superpowers/specs/: 2026-06-28-wxd-installer-design.md
src/: cli.rs  collect.rs  generate.rs  lib.rs  main.rs  spec.rs  validate.rs
tests/: cli_integration.rs
