[package]
name = "sw-mod-existing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Existing-cluster module: adopt a cluster the user already has (kubeconfig) instead of provisioning one"

[dependencies]
sw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
