[package]
name = "sw-mod-prereqs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prerequisite auto-installer: downloads oc, helm, openshift-install, cpd-cli into ~/.wxd/bin"

[dependencies]
sw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
