[package]
name = "sw-mod-provision"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenShift cluster provisioning module: Provisioner trait + AwsProvisioner (openshift-install IPI)"

[dependencies]
sw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
