[package]
name = "sw-mod-services"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Service framework: ServiceInstaller trait + ServicesModule that installs selected IBM services"

[dependencies]
sw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
