[package]
name = "sw-mod-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cluster storage: provisions an RWX file storage class (AWS EFS) for Software Hub / watsonx.data"

[dependencies]
sw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
